--- a/components/header.html
+++ b/components/header.html
@@ -13,7 +13,7 @@
     <div class="navigation">
         <a href="insights.html">Insights</a>
         <span>|</span>
-        <a href="consulting-services.html">Consulting Services</a>
+        <a href="consulting-services.html">Past Experience</a>
         <span>|</span>
         <a href="stack.html">Stack</a>
         <span>|</span>
