Add & run pre-commit hooks

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 
 <div id="divToImport">
+  <footer>
+    <div class="contact">
+      <h2>Contact Us</h2>
+      <p>Have questions? Reach out to us:</p>
+      <a href="https://wa.me/31653398717">WhatsApp</a>
+      <span>|</span>
+      <a href="mailto:daniel.rocharuiz@bocconialumni.it">e-mail</a>
+      <span>|</span>
+      <a href="https://www.linkedin.com/in/econometrics/" target="_blank"
+        >LinkedIn</a
+      >
+    </div>
 
-    <footer>
-        <div class="contact">
-            <h2>Contact Us</h2>
-            <p>Have questions? Reach out to us:</p>
-            <a href="https://wa.me/31653398717">WhatsApp</a>
-            <span>|</span>
-            <a href="mailto:daniel.rocharuiz@bocconialumni.it">e-mail</a>
-            <span>|</span>
-            <a href="https://www.linkedin.com/in/econometrics/" target="_blank">LinkedIn</a>
-        </div>
-
-        <p>&copy; 2024 Daniel Ruiz. All rights reserved.</p>
-    </footer>
-
+    <p>&copy; 2024 Daniel Ruiz. All rights reserved.</p>
+  </footer>
 </div>
