--- a/components/pc-about-us.html
+++ b/components/pc-about-us.html
@@ -5,7 +5,12 @@
       <div class="wrapper">
         <div class="content">
           <h2>Our Mission</h2>
-          <p>We are passionate about innovation and success. Our mission is to help companies harness the power of their data to sustainably generate and capture value. We help them to make informed decisions, drive growth, reduce inefficiencies, and create lasting impact.</p>
+          <p>
+            We are passionate about innovation and success. Our mission is to
+            help companies harness the power of their data to sustainably
+            generate and capture value. We help them to make informed decisions,
+            drive growth, reduce inefficiencies, and create lasting impact.
+          </p>
           <p>Daniel is based in Amsterdam, The Netherlands.</p>
           <h2>Our Pillars of Expertise</h2>
           <p>Our deliveries are centered in four pillars of expertise:</p>
@@ -14,10 +19,18 @@
           <p>Financial Advisory</p>
           <p>Coaching</p>
           <h2>Success Stories</h2>
-          <p>Over the past decade, Daniel has participated in many large scale projects, and supported successful project deliveries and deals in Europe, North America, and Latin America.</p>
+          <p>
+            Over the past decade, Daniel has participated in many large scale
+            projects, and supported successful project deliveries and deals in
+            Europe, North America, and Latin America.
+          </p>
           <h2>CV</h2>
           <p>
-            <a href="assets/documents/Daniel Ruiz - DS MLE - CV.pdf" download="Daniel Ruiz - DS MLE - CV.pdf">Download Daniel's CV and reach out.</a>
+            <a
+              href="assets/documents/Daniel Ruiz - DS MLE - CV.pdf"
+              download="Daniel Ruiz - DS MLE - CV.pdf"
+              >Download Daniel's CV and reach out.</a
+            >
           </p>
         </div>
       </div>
