--- a/components/header.html
+++ b/components/header.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 
 <div id="divToImport">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Daniel Ruiz</title>
-</head>
+  </head>
 
-<body>
-<header>
-    <h1><a href="index.html">Daniel Ruiz</a></h1>
-    <p>Making the most of your journey into the future.</p>
-    <div class="navigation">
+  <body>
+    <header>
+      <h1><a href="index.html">Daniel Ruiz</a></h1>
+      <p>Making the most of your journey into the future.</p>
+      <div class="navigation">
         <a href="insights.html">Insights</a>
         <span>|</span>
         <a href="consulting-services.html">Past Experience</a>
@@ -18,7 +18,7 @@
         <a href="stack.html">Stack</a>
         <span>|</span>
         <a href="about-us.html">About Us</a>
-    </div>
-</header>
-</body>
+      </div>
+    </header>
+  </body>
 </div>
