--- a/components/pc-index.html
+++ b/components/pc-index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
-<div id="divToImport">
-    <div class="container">    
-        <div class="page-exhibit">
-          <img src="assets/images/hiking-in-the-alps.jpeg" alt="Hiking in the Alps">
-        </div>
+  <div id="divToImport">
+    <div class="container">
+      <div class="page-exhibit">
+        <img
+          src="assets/images/hiking-in-the-alps.jpeg"
+          alt="Hiking in the Alps"
+        />
       </div>
-</div>
-
+    </div>
+  </div>
 </html>
