--- a/components/services.html
+++ b/components/services.html
@@ -1,36 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <div id="sourceDiv">
+  <section class="services" id="services">
+    <h1>Services</h1>
+    <div class="container">
+      <div class="service">
+        <span class="material-icons-sharp">design_services</span>
+        <h3>Model Development</h3>
+        <p>
+          I development professional Machine Learning and Econonetric models using the latest
+          frameworks and technologies, and I am committed to generating a value-adding solution. If
+          a logistic regression or a random-forest solves it, I am not afraid of using it.
+        </p>
+      </div>
 
-    <section class="services" id="services">
-        <h1>Services</h1>
-        <div class="container">
-            <div class="service">
-                <span class="material-icons-sharp">design_services</span>
-                <h3>Model Development</h3>
-                <p>
-                    I development professional Machine Learning and Econonetric models using the latest frameworks and technologies, and I am committed to generating a value-adding solution. If a logistic regression or a random-forest solves it, I am not afraid of using it.
-                </p>
-            </div>
+      <div class="service">
+        <span class="material-icons-sharp">language</span>
+        <h3>Software Development</h3>
+        <p>
+          I introduce Data &amp; AI teams to best practices of MLOPS, Software Engineering, and
+          Agile. I help them work together to deliver excellent data products faster and better. I
+          help teams master GitHub, Azure, and Databricks.
+        </p>
+      </div>
 
-            <div class="service">
-                <span class="material-icons-sharp">language</span>
-                <h3>Software Development</h3>
-                <p>
-                    I introduce Data &amp; AI teams to best practices of MLOPS, Software Engineering, and Agile. I help them work together to deliver excellent data products faster and better. I help teams master GitHub, Azure, and Databricks.
-                </p>
-            </div>
-
-            <div class="service">
-                <span class="material-icons-sharp">devices</span>
-                <h3>Data Analysis</h3>
-                <p>
-                    I analyze data to identify patterns, and enable managers to make well informed decisions about their subject matter. I let the data speak.
-                </p>
-            </div>
-
-        </div>
-
-    </section>
-
+      <div class="service">
+        <span class="material-icons-sharp">devices</span>
+        <h3>Data Analysis</h3>
+        <p>
+          I analyze data to identify patterns, and enable managers to make well informed decisions
+          about their subject matter. I let the data speak.
+        </p>
+      </div>
+    </div>
+  </section>
 </div>
