--- a/components/socials.html
+++ b/components/socials.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <div id="sourceDiv">
-    <div class="socials">
-        <a href="https://www.linkedin.com/in/econometrics/" target="_blank">
-            <i class="uil uil-linkedin"></i>
-        </a>
-        <a href="https://github.com/thegitofdaniel" target="_blank">
-            <i class="uil uil-github"></i>
-        </a>
-        <a href="https://medium.com/@theblogofdaniel" target="_blank">
-            <i class="uil uil-medium-m"></i>
-        </a>
-    </div>
+  <div class="socials">
+    <a href="https://www.linkedin.com/in/econometrics/" target="_blank">
+      <i class="uil uil-linkedin"></i>
+    </a>
+    <a href="https://github.com/thegitofdaniel" target="_blank">
+      <i class="uil uil-github"></i>
+    </a>
+    <a href="https://medium.com/@theblogofdaniel" target="_blank">
+      <i class="uil uil-medium-m"></i>
+    </a>
+  </div>
 </div>
