--- a/components/portfolio.html
+++ b/components/portfolio.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <div id="sourceDiv">
-  <section class="recent-work" id="portfolio">
+  <section class="portfolio" id="portfolio">
     <h1>Portfolio</h1>
     <div class="container">
       <h4>Some open-source recent works.</h4>
