--- a/styles/style.css
+++ b/styles/style.css
@@ -451,29 +451,29 @@ section.services .container .service:nth-child(3) span{
     background: var(--color-success);
 }
 
-section.recent-work .projects{
+section.portfolio .projects{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 3rem;
 }
 
-section.recent-work .projects .project{
+section.portfolio .projects .project{
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-section.recent-work .projects .project .action{
+section.portfolio .projects .project .action{
     display: flex;
     gap: 2rem;
 }
 
-/* section.recent-work .projects .project .action  */
+/* section.portfolio .projects .project .action  */
 a{
     color: var(--color-primary);
 }
 
-/* section.recent-work .projects .project .action  */
+/* section.portfolio .projects .project .action  */
 a:hover{
     text-decoration: underline;
 }
@@ -813,11 +813,11 @@ footer .copyright{
         grid-template-columns: 1fr;
     }
 
-    section.recent-work .container .projects{
+    section.portfolio .container .projects{
         grid-template-columns: 1fr;
     }
 
-    section.recent-work .container h1{
+    section.portfolio .container h1{
         width: 94vw;
         margin: 1.4rem 0 1rem;
     }
