--- a/components/services.html
+++ b/components/services.html
@@ -5,31 +5,30 @@
     <h1>Services</h1>
     <div class="container">
       <div class="service">
-        <span class="material-icons-sharp">design_services</span>
+        <span class="material-icons-sharp">model_training</span>
         <h3>Model Development</h3>
         <p>
-          I development professional Machine Learning and Econonetric models using the latest
-          frameworks and technologies, and I am committed to generating a value-adding solution. If
-          a logistic regression or a random-forest solves it, I am not afraid of using it.
+          I development professional Machine Learning and Econometric models using the latest
+          frameworks and technologies, and I am committed to generating a value-adding solution. 
+          The data and context should determine the complexity of the solution adopted.
         </p>
       </div>
 
       <div class="service">
-        <span class="material-icons-sharp">language</span>
-        <h3>Software Development</h3>
+        <span class="material-icons-sharp">diversity_3</span>
+        <h3>MLOPS</h3>
         <p>
           I introduce Data &amp; AI teams to best practices of MLOPS, Software Engineering, and
-          Agile. I help them work together to deliver excellent data products faster and better. I
-          help teams master GitHub, Azure, and Databricks.
+          Agile. I help them work better together to deliver excellent data products faster through proven Ways of Working. 
+          I help teams master GitHub, Azure, and Databricks.
         </p>
       </div>
 
       <div class="service">
-        <span class="material-icons-sharp">devices</span>
-        <h3>Data Analysis</h3>
+        <span class="material-icons-sharp">payments</span>
+        <h3>Finance</h3>
         <p>
-          I analyze data to identify patterns, and enable managers to make well informed decisions
-          about their subject matter. I let the data speak.
+          I use quantitative and qualitative financial data to scientifically perform the Valuation and risk of companies and bonds, as well as aggregate properties of portfolios.
         </p>
       </div>
     </div>
