--- a/components/landing.html
+++ b/components/landing.html
@@ -25,7 +25,11 @@
           projects to clients all over Europe.
         </p>
         <a href="#contact" class="btn btn-primary">Let's Talk</a>
-        <a href="./assets/documents/CV - Daniel Ruiz.pdf" class="btn btn-primary" download>
+        <a
+          href="./assets/documents/CV - Daniel Ruiz.pdf"
+          class="btn btn-primary"
+          download="CV - Daniel Ruiz.pdf"
+        >
           <i class="uil uil-download-alt"></i>
           Download CV
         </a>
