--- a/components/socials.html
+++ b/components/socials.html
@@ -2,7 +2,11 @@
 
 <div id="sourceDiv">
   <div class="socials">
-    <a href="https://www.linkedin.com/in/econometrics/" target="_blank" title="Visit my LinkedIn profile">
+    <a
+      href="https://www.linkedin.com/in/econometrics/"
+      target="_blank"
+      title="Visit my LinkedIn profile"
+    >
       <i class="uil uil-linkedin"></i>
     </a>
     <a href="https://github.com/thegitofdaniel" target="_blank" title="Visit my GitHub profile">
