--- a/components/services.html
+++ b/components/services.html
@@ -9,8 +9,8 @@
         <h3>Model Development</h3>
         <p>
           I development professional Machine Learning and Econometric models using the latest
-          frameworks and technologies, and I am committed to generating a value-adding solution. 
-          The data and context should determine the complexity of the solution adopted.
+          frameworks and technologies, and I am committed to generating a value-adding solution. The
+          data and context should determine the complexity of the solution adopted.
         </p>
       </div>
 
@@ -19,8 +19,8 @@
         <h3>MLOPS</h3>
         <p>
           I introduce Data &amp; AI teams to best practices of MLOPS, Software Engineering, and
-          Agile. I help them work better together to deliver excellent data products faster through proven Ways of Working. 
-          I help teams master GitHub, Azure, and Databricks.
+          Agile. I help them work better together to deliver excellent data products faster through
+          proven Ways of Working. I help teams master GitHub, Azure, and Databricks.
         </p>
       </div>
 
@@ -28,7 +28,8 @@
         <span class="material-icons-sharp">payments</span>
         <h3>Finance</h3>
         <p>
-          I use quantitative and qualitative financial data to scientifically perform the Valuation and risk of companies and bonds, as well as aggregate properties of portfolios.
+          I use quantitative and qualitative financial data to scientifically perform the Valuation
+          and risk of companies and bonds, as well as aggregate properties of portfolios.
         </p>
       </div>
     </div>
