--- a/components/landing.html
+++ b/components/landing.html
@@ -4,13 +4,21 @@
   <section class="landing">
     <div class="container">
       <div class="socials">
-        <a href="https://www.linkedin.com/in/econometrics/" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/econometrics/"
+          target="_blank"
+          title="Visit my LinkedIn profile"
+        >
           <i class="uil uil-linkedin"></i>
         </a>
-        <a href="https://github.com/thegitofdaniel" target="_blank">
+        <a href="https://github.com/thegitofdaniel" target="_blank" title="Visit my GitHub profile">
           <i class="uil uil-github"></i>
         </a>
-        <a href="https://medium.com/@theblogofdaniel" target="_blank">
+        <a
+          href="https://medium.com/@theblogofdaniel"
+          target="_blank"
+          title="Visit my Medium profile"
+        >
           <i class="uil uil-medium-m"></i>
         </a>
       </div>
