--- a/components/landing.html
+++ b/components/landing.html
@@ -1,60 +1,4 @@
 <!doctype html>
 
-<div id="sourceDiv">
-  <section class="landing">
-    <div class="container">
-      <div class="socials">
-        <a
-          href="https://www.linkedin.com/in/econometrics/"
-          target="_blank"
-          title="Visit my LinkedIn profile"
-        >
-          <i class="uil uil-linkedin"></i>
-        </a>
-        <a href="https://github.com/thegitofdaniel" target="_blank" title="Visit my GitHub profile">
-          <i class="uil uil-github"></i>
-        </a>
-        <a
-          href="https://medium.com/@theblogofdaniel"
-          target="_blank"
-          title="Visit my Medium profile"
-        >
-          <i class="uil uil-medium-m"></i>
-        </a>
-      </div>
-
-      <div class="info">
-        <h1>Consultant in Data &amp; AI for Finance</h1>
-        <h3>Hi, I'm Daniel Ruiz</h3>
-        <p>
-          I'm an Economist turned into Data Scientist and Machine Learning Engineer. That's a fancy
-          way of saying I love econometrics, developing models, and bringing them into production. I
-          am very curious about Data, AI, and Finance. My curiosity has led me to develop awesome
-          projects to clients all over Europe.
-        </p>
-        <a href="#contact" class="btn btn-primary">Let's Talk</a>
-        <a
-          href="./assets/documents/CV - Daniel Ruiz.pdf"
-          class="btn btn-primary"
-          download="CV - Daniel Ruiz.pdf"
-        >
-          <i class="uil uil-download-alt"></i>
-          Download CV
-        </a>
-      </div>
-
-      <div class="profile-area">
-        <div class="outer-circle">
-          <span class="material-symbols-outlined">design_services</span>
-          <span class="material-symbols-outlined">dns</span>
-          <span class="material-symbols-outlined">code</span>
-          <span class="material-symbols-outlined">subscriptions</span>
-        </div>
-
-        <div class="inner-circle">
-          <img src="./assets/images/daniel-ruiz-portrait-square.jpg" alt="" />
-        </div>
-      </div>
-    </div>
-  </section>
+<div id="XXX">
 </div>
