--- a/components/skills.html
+++ b/components/skills.html
@@ -1,40 +1,4 @@
 <!doctype html>
 
-<div id="sourceDiv">
-  <section class="skills" id="skills">
-    <h1>Skills</h1>
-    <div class="container">
-      <div class="skill">
-        <div class="head">
-          <div class="left">
-            <span class="material-icons-sharp">design_services</span>
-            <h4>Chat-bot Development</h4>
-          </div>
-          <div class="right">
-            <span class="material-icons-sharp">expand_more</span>
-          </div>
-        </div>
-        <div class="items">
-          <div class="item">
-            <h5>GPT-3</h5>
-            <div class="progress-area">
-              <div class="progress-bar">
-                <div class="progress"></div>
-              </div>
-              <!-- <h5>92%</h5> -->
-            </div>
-          </div>
-          <div class="item">
-            <h5>GPT-4</h5>
-            <div class="progress-area">
-              <div class="progress-bar">
-                <div class="progress"></div>
-              </div>
-              <!-- <h5>85%</h5> -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+<div id="XXX">
 </div>
