--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@
     text-decoration: none;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 10px;
     background: var(--color-primary-light);
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
     background: var(--color-primary);
 }
 
@@ -57,52 +57,52 @@ h5 {
     line-height: 1.2;
 }
 
-h1{
+h1 {
     font-size: 3.8rem;
 }
 
-h2{
+h2 {
     font-size: 2.6rem;
 }
 
-h3{
+h3 {
     font-size: 1.6rem;
 }
 
-h4{
+h4 {
     font-size: 1.2rem;
 }
 
-h5{
+h5 {
     font-size: 0.86rem;
 }
 
-p{
+p {
     line-height: 1.8;
 }
 
-.container{
+.container {
     width: 89%;
     margin: 0 auto;
 }
 
-section{
+section {
     padding: 10rem 0 7rem;
     max-width: 100vw;
     overflow-x: hidden;
 }
 
-section h1{
+section h1 {
     text-align: center;
     display: block;
-    margin-bottom: 5rem;   
+    margin-bottom: 5rem;
 }
 
-img{
+img {
     width: 100%;
 }
 
-.btn{
+.btn {
     padding: 1.4rem 3.4rem;
     font-size: 1.1rem;
     color: var(--color-black);
@@ -112,16 +112,16 @@ img{
     transition: var(--transition);
 }
 
-.btn-hover{
+.btn-hover {
     box-shadow: 0 2rem 2rem var(--color-primary-light);
 }
 
-.btn-primary{
+.btn-primary {
     background: var(--color-primary);
     color: var(--color-white);
 }
 
-nav{
+nav {
     width: 100%;
     height: 5rem;
     background: var(--color-white);
@@ -134,32 +134,32 @@ nav{
     border-bottom: 1px solid var(--color-white);
 }
 
-nav.show-box-shadow{
+nav.show-box-shadow {
     box-shadow: 0 0.6rem 1rem var(--color-primary-light);
     border: none;
 }
 
-nav .container{
+nav .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100%;
 }
 
-nav button{
+nav button {
     display: none;
 }
 
-nav h3{
+nav h3 {
     color: var(--color-primary);
 }
 
-nav .container ul{
+nav .container ul {
     display: flex;
     height: 100%;
 }
 
-nav .container ul li a{
+nav .container ul li a {
     height: 100%;
     width: 7rem;
     display: flex;
@@ -170,16 +170,16 @@ nav .container ul li a{
     transition: var(--transition);
 }
 
-nav .container ul li a:hover{
+nav .container ul li a:hover {
     color: var(--color-primary);
 }
 
-nav .container ul li a.active{
+nav .container ul li a.active {
     background: var(--color-primary);
     color: var(--color-white);
 }
 
-section.landing{
+section.landing {
     display: grid;
     place-items: center;
     position: relative;
@@ -187,20 +187,20 @@ section.landing{
     padding-bottom: 14rem;
 }
 
-section.landing .container{
+section.landing .container {
     display: grid;
     grid-template-columns: 5rem auto 28rem;
     gap: 2rem;
 }
 
-section.landing .socials{
+section.landing .socials {
     display: flex;
     flex-direction: column;
     gap: 1.6rem;
     margin-top: 5rem;
 }
 
-section.landing .socials a{
+section.landing .socials a {
     font-size: 1.1em;
     background: var(--color-light);
     color: var(--color-dark);
@@ -214,31 +214,31 @@ section.landing .socials a{
     transition: var(--transition);
 }
 
-section.landing .socials a:hover{
+section.landing .socials a:hover {
     background: var(--color-primary);
     color: var(--color-white);
 }
 
-section.landing .info h1{
+section.landing .info h1 {
     text-align: left;
     margin: 0;
 }
 
-section.landing h3{
+section.landing h3 {
     margin: 2.4rem 0 1rem;
 }
 
-section.landing .info p{
+section.landing .info p {
     width: 35rem;
 }
 
-section.landing .profile-area{
+section.landing .profile-area {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-section.landing .profile-area .outer-circle{
+section.landing .profile-area .outer-circle {
     width: 26rem;
     height: 26rem;
     border: 1px solid var(--color-primary);
@@ -253,7 +253,7 @@ section.landing .profile-area .outer-circle{
     }
 }
 
-section.landing .profile-area .outer-circle span{
+section.landing .profile-area .outer-circle span {
     display: block;
     width: 4rem;
     height: 4rem;
@@ -267,27 +267,27 @@ section.landing .profile-area .outer-circle span{
     box-shadow: 0 0 1rem var(--color-primary-light);
 }
 
-section.landing .profile-area .outer-circle span:nth-child(1){
+section.landing .profile-area .outer-circle span:nth-child(1) {
     left: calc(60% - 2rem);
     top: -2rem;
 }
 
-section.landing .profile-area .outer-circle span:nth-child(2){
+section.landing .profile-area .outer-circle span:nth-child(2) {
     right: -2rem;
     top: calc(50% - 2rem);
 }
 
-section.landing .profile-area .outer-circle span:nth-child(3){
+section.landing .profile-area .outer-circle span:nth-child(3) {
     left: -2rem;
     top: calc(50% - 2rem);
 }
 
-section.landing .profile-area .outer-circle span:nth-child(4){
+section.landing .profile-area .outer-circle span:nth-child(4) {
     left: calc(60% - 2rem);
     bottom: -2rem;
 }
 
-section.landing .profile-area .inner-circle{
+section.landing .profile-area .inner-circle {
     position: absolute;
     width: 18rem;
     height: 18rem;
@@ -295,48 +295,48 @@ section.landing .profile-area .inner-circle{
     overflow: hidden;
 }
 
-section.about{
+section.about {
     background: var(--color-light);
 }
 
-section.about .container{
+section.about .container {
     display: grid;
     grid-template-columns: 26rem auto;
     gap: 5rem;
 }
 
-section.about p{
+section.about p {
     margin-bottom: 1rem;
 }
 
-section.about .container .read-more-content{
+section.about .container .read-more-content {
     display: none;
 }
 
-section.about .container .read-more-content.show-content{
+section.about .container .read-more-content.show-content {
     display: block;
 }
 
-section.about .container .read-more{
+section.about .container .read-more {
     display: block;
     margin: 1rem 0 2rem;
     color: var(--color-primary);
     cursor: pointer;
 }
 
-section.about .container .read-more:hover{
+section.about .container .read-more:hover {
     text-decoration: underline;
 }
 
-section.skills .container{
+section.skills .container {
     width: 50%;
 }
 
-section.skills .container .skill{
+section.skills .container .skill {
     margin-bottom: 1rem;
 }
 
-section.skills .skill .head{
+section.skills .skill .head {
     background: var(--color-primary);
     display: flex;
     justify-content: space-between;
@@ -346,25 +346,25 @@ section.skills .skill .head{
     cursor: pointer;
 }
 
-section.skills .skill .head h4{
+section.skills .skill .head h4 {
     color: var(--color-white);
 }
 
-section.skills .skill .head .left{
+section.skills .skill .head .left {
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 
-section.skills .skill .items{
+section.skills .skill .items {
     display: none;
 }
 
-section.skills .container .skill .items.show-items{
+section.skills .container .skill .items.show-items {
     display: block;
 }
 
-section.skills .skill .item{
+section.skills .skill .item {
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -375,40 +375,40 @@ section.skills .skill .item{
     transition: var(--transition);
 }
 
-section.skills .skill .item:hover{
+section.skills .skill .item:hover {
     background: var(--color-white);
 }
 
-section.skills .skill .progress-area{
+section.skills .skill .progress-area {
     width: 100%;
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 
-section.skills .item .progress-bar{
+section.skills .item .progress-bar {
     width: 100%;
     height: 1rem;
     background: var(--color-primary-light);
 }
 
-section.skills .item .progress-bar .progress{
+section.skills .item .progress-bar .progress {
     height: 100%;
     width: 100%;
     background: var(--color-primary);
 }
 
-section.services{
+section.services {
     background: var(--color-light);
 }
 
-section.services .container{
+section.services .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
 }
 
-section.services .container .service{
+section.services .container .service {
     background: var(--color-white);
     padding: 3rem 2rem;
     text-align: center;
@@ -419,11 +419,11 @@ section.services .container .service{
     transition: var(--transition);
 }
 
-section.services .container .service:hover{
+section.services .container .service:hover {
     box-shadow: 0 3rem 3rem var(--color-primary-light);
 }
 
-section.services .container .service span{
+section.services .container .service span {
     background: var(--color-success);
     width: 4rem;
     height: 4rem;
@@ -445,30 +445,30 @@ section.services .container .service:nth-child(3) span{
 }
 */
 
-section.portfolio .projects{
+section.portfolio .projects {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 3rem;
 }
 
-section.portfolio .projects .project{
+section.portfolio .projects .project {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-section.portfolio .projects .project .action{
+section.portfolio .projects .project .action {
     display: flex;
     gap: 2rem;
 }
 
 /* section.portfolio .projects .project .action  */
-a{
+a {
     color: var(--color-primary);
 }
 
 /* section.portfolio .projects .project .action  */
-a:hover{
+a:hover {
     text-decoration: underline;
 }
 
@@ -476,16 +476,16 @@ section.testimonials {
     background: var(--color-light);
 }
 
-section.testimonials .container{
+section.testimonials .container {
     width: 4rem;
 }
 
-section.testimonials .carousel{
+section.testimonials .carousel {
     display: flex;
     align-items: center;
 }
 
-section.testimonials .testimonial{
+section.testimonials .testimonial {
     background: var(--color-white);
     padding: 2rem;
     display: flex;
@@ -495,65 +495,66 @@ section.testimonials .testimonial{
     margin-bottom: 2rem;
 }
 
-section.testimonials .testimonial .head{
+section.testimonials .testimonial .head {
     display: flex;
     justify-content: space-between;
 }
 
-section.testimonials .testimonial .head .profile-area{
+section.testimonials .testimonial .head .profile-area {
     display: flex;
     gap: 1rem;
 }
 
-section.testimonials .testimonial .head .profile-area .avatar{
+section.testimonials .testimonial .head .profile-area .avatar {
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
     overflow: hidden;
 }
 
-section.testimonials .testimonial .head .stars{
+section.testimonials .testimonial .head .stars {
     color: var(--color-primary);
 }
 
-section.testimonials .testimonial .head .stars span{
+section.testimonials .testimonial .head .stars span {
     font-size: 1.3rem;
 }
 
-section.contact{
-    background: url("images/feed-6.jpg") no-repeat center center/cover;
+section.contact {
+    background: url('images/feed-6.jpg') no-repeat center center/cover;
     padding: 0;
     max-width: 100vw;
 }
 
-section.contact .overlay{
+section.contact .overlay {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.7);
     padding: 10rem 0 7rem;
 }
 
-section.contact .container{
+section.contact .container {
     width: 40%;
 }
 
-section.contact .container h1{
+section.contact .container h1 {
     margin: 0;
     color: var(--color-white);
 }
 
-section.contact .container p{
+section.contact .container p {
     text-align: center;
     color: var(--color-white);
     opacity: 0.8;
     margin-top: 0.5rem;
 }
 
-section.contact form{
+section.contact form {
     margin-top: 3rem;
 }
 
-section.contact form input, section.contact form textarea{
+section.contact form input,
+section.contact form textarea {
     display: block;
     width: 100%;
     margin: 0.5rem 0;
@@ -564,20 +565,22 @@ section.contact form input, section.contact form textarea{
     transition: var(--transition);
 }
 
-section.contact form input:focus, section.contact form textarea:focus{
+section.contact form input:focus,
+section.contact form textarea:focus {
     background: var(--color-white);
     color: var(--color-black);
 }
 
-section.contact form textarea{
+section.contact form textarea {
     height: 10rem;
 }
 
-section.contact form input::placeholder, section.contact form textarea::placeholder{
+section.contact form input::placeholder,
+section.contact form textarea::placeholder {
     color: var(--color-white);
 }
 
-section.contact form .btn{
+section.contact form .btn {
     width: 14rem;
     border: none;
     background: var(--color-white);
@@ -585,42 +588,42 @@ section.contact form .btn{
     margin: 2rem auto 0;
 }
 
-section.contact form .btn:hover{
+section.contact form .btn:hover {
     background: var(--color-primary);
     cursor: pointer;
     color: var(--color-white);
 }
 
-footer{
+footer {
     padding-top: 5rem;
 }
 
-footer .container{
+footer .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-footer .container ul{
+footer .container ul {
     display: flex;
     gap: 3rem;
 }
 
-footer .container ul a{
+footer .container ul a {
     color: var(--color-dark);
     transition: var(--transition);
 }
 
-footer .container ul a:hover{
+footer .container ul a:hover {
     color: var(--color-primary);
 }
 
-footer .container .socials{
+footer .container .socials {
     display: flex;
     gap: 2rem;
 }
 
-footer .container .socials a{
+footer .container .socials a {
     background: var(--color-light);
     color: var(--color-dark);
     padding: 0.3rem;
@@ -628,12 +631,12 @@ footer .container .socials a{
     transition: var(--transition);
 }
 
-footer .container .socials a:hover{
+footer .container .socials a:hover {
     background: var(--color-primary);
     color: var(--color-white);
 }
 
-footer .copyright{
+footer .copyright {
     background: var(--color-primary);
     color: var(--color-white);
     text-align: center;
@@ -642,33 +645,32 @@ footer .copyright{
     font-size: 0.8rem;
 }
 
-
-@media  screen and (max-width: 650px) {
-    h1{
+@media screen and (max-width: 650px) {
+    h1 {
         font-size: 2.2rem;
     }
-    h2{
+    h2 {
         font-size: 1.6rem;
     }
-    h3{
+    h3 {
         font-size: 1.2rem;
     }
     h4 {
         font-size: 1rem;
     }
-    h5{
+    h5 {
         font-size: 0.6rem;
     }
 
-    .container{
+    .container {
         width: 94%;
     }
 
-    nav h3{
+    nav h3 {
         margin-left: 1rem;
     }
 
-    nav .container{
+    nav .container {
         width: 100%;
     }
 
@@ -684,22 +686,22 @@ footer .copyright{
         display: none;
     }
 
-    nav ul li{
+    nav ul li {
         height: 4.6rem;
         width: 100%;
     }
 
-    nav .container ul li a{
+    nav .container ul li a {
         width: 100%;
         justify-content: start;
         padding-left: 2rem;
     }
 
-    nav .container ul li a:hover{
+    nav .container ul li a:hover {
         padding-left: 3rem;
     }
 
-    nav button{
+    nav button {
         display: inline-block;
         cursor: pointer;
         background: transparent;
@@ -707,139 +709,138 @@ footer .copyright{
         margin-right: 1rem;
     }
 
-    nav button#close-btn{
+    nav button#close-btn {
         display: none;
     }
 
-    section.landing{
+    section.landing {
         margin-top: -4rem;
         padding-bottom: 7rem;
         max-width: 100vw;
         overflow-x: hidden;
     }
 
-    section.landing .container{
+    section.landing .container {
         grid-template-columns: 1fr;
         grid-template-rows: 20% 50%;
         text-align: center;
         row-gap: 6rem;
     }
 
-    section.landing .container .socials{
+    section.landing .container .socials {
         display: none;
     }
 
-    section.landing .container .info{
+    section.landing .container .info {
         width: 90%;
         margin: 0 auto;
     }
 
-    section.landing .container .info h1{
+    section.landing .container .info h1 {
         text-align: center;
     }
 
-    section.landing .container .info p{
+    section.landing .container .info p {
         margin: 0 auto;
         width: 92%;
     }
 
-    section.landing .container .profile-area{
+    section.landing .container .profile-area {
         grid-row: 1;
         width: 94%;
         margin: 0 auto;
     }
 
-    section.landing .container .outer-circle{
+    section.landing .container .outer-circle {
         width: 16rem;
         height: 16rem;
     }
 
-    section.landing .container .inner-circle{
+    section.landing .container .inner-circle {
         width: 10rem;
         height: 10rem;
     }
 
-    section.landing .container .outer-circle span{
+    section.landing .container .outer-circle span {
         width: 3rem;
         height: 3rem;
     }
 
-    section.landing .profile-area .outer-circle span:nth-child(1){
+    section.landing .profile-area .outer-circle span:nth-child(1) {
         left: calc(60% - 1.5rem);
         top: -1.5rem;
     }
-    
-    section.landing .profile-area .outer-circle span:nth-child(1.5){
+
+    section.landing .profile-area .outer-circle span:nth-child(1.5) {
         right: -1.5rem;
         top: calc(50% - 1.5rem);
     }
-    
-    section.landing .profile-area .outer-circle span:nth-child(3){
+
+    section.landing .profile-area .outer-circle span:nth-child(3) {
         left: -1.5rem;
         top: calc(50% - 1.5rem);
     }
-    
-    section.landing .profile-area .outer-circle span:nth-child(4){
+
+    section.landing .profile-area .outer-circle span:nth-child(4) {
         left: calc(60% - 1.5rem);
         bottom: -1.5rem;
     }
 
-    section.about .container{
+    section.about .container {
         grid-template-columns: 1fr;
         gap: 1rem;
         text-align: center;
     }
 
-    section.about .container .info{
-        
+    section.about .container .info {
     }
 
-    section.about .container .image{
+    section.about .container .image {
         width: 32rem;
         height: 32rem;
     }
 
-    section.skills .container{
+    section.skills .container {
         width: 94%;
     }
 
-    section.services .container{
+    section.services .container {
         grid-template-columns: 1fr;
     }
 
-    section.portfolio .container .projects{
+    section.portfolio .container .projects {
         grid-template-columns: 1fr;
     }
 
-    section.portfolio .container h1{
+    section.portfolio .container h1 {
         width: 94vw;
         margin: 1.4rem 0 1rem;
     }
-    
-    section.testimonials .container{
+
+    section.testimonials .container {
         grid-template-columns: 1fr;
         width: 94vw;
     }
 
-    section.testimonials .container .testimonial .hed .stars span{
+    section.testimonials .container .testimonial .hed .stars span {
         font-size: 0.8rem;
     }
 
-    section.contact .container{
+    section.contact .container {
         width: 94vw;
     }
 
-    section.contact .container p{
+    section.contact .container p {
         width: 80vw;
         margin: 0.5rem auto 0;
     }
 
-    footer .container{
+    footer .container {
         flex-direction: column;
         gap: 3rem;
     }
 
-    footer .container ul{
+    footer .container ul {
         flex-direction: column;
         text-align: center;
         gap: 1rem;
