--- a/style.css
+++ b/style.css
@@ -10,10 +10,9 @@
     --color-dark: #525252;
     --color-black: #141415;
     --color-primary: #f24e1e;
-    --color-primary-light: hsl(14, 89%, 53%, 12%);
+    --color-primary-light: hsl(14deg 89% 53% / 12%);
     --color-success: #29f5a6;
     --color-warning: #ffce31;
-
     --transition: all 300ms ease;
 }
 
@@ -43,7 +42,7 @@ html {
 
 body {
     background: var(--color-white);
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     color: var(--color-dark);
     max-width: 100vw;
 }
@@ -135,15 +134,15 @@ nav {
 }
 
 nav.show-box-shadow {
-    box-shadow: 0 0.6rem 1rem var(--color-primary-light);
     border: none;
+    box-shadow: 0 0.6rem 1rem var(--color-primary-light);
 }
 
 nav .container {
-    display: flex;
-    justify-content: space-between;
     align-items: center;
+    display: flex;
     height: 100%;
+    justify-content: space-between;
 }
 
 nav button {
@@ -254,7 +253,6 @@ section.landing .profile-area .outer-circle {
 }
 
 section.landing .profile-area .outer-circle span {
-    display: block;
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
@@ -529,7 +527,7 @@ section.contact {
 section.contact .overlay {
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgb(0 0 0 / 70%);
     padding: 10rem 0 7rem;
 }
 
@@ -645,19 +643,23 @@ footer .copyright {
     font-size: 0.8rem;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (width <= 650px) {
     h1 {
         font-size: 2.2rem;
     }
+
     h2 {
         font-size: 1.6rem;
     }
+
     h3 {
         font-size: 1.2rem;
     }
+
     h4 {
         font-size: 1rem;
     }
+
     h5 {
         font-size: 0.6rem;
     }
@@ -790,9 +792,6 @@ footer .copyright {
         grid-template-columns: 1fr;
         gap: 1rem;
         text-align: center;
-    }
-
-    section.about .container .info {
     }
 
     section.about .container .image {
